--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ hs_err_pid*
 /day2_loops/build/
 /Day3_class/nbproject/private/
 /Day3_class/build/
+/Day4_Classes2/nbproject/private/
+/Day4_Classes2/build/
